--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/progweb
+spring.datasource.username=postgres
+spring.datasource.password=EdwinV56
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true 
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.servlet.context-path=/API/v1.0/Matricula
+
+server.port=8086
