--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dataTeacher
+spring.datasource.url=jdbc:postgresql://localhost:5432/estuData
 spring.datasource.username=postgres
 spring.datasource.password=EdwinV56
 
@@ -7,6 +7,6 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
-server.servlet.context-path=/API/v1.0/Profesion
+server.servlet.context-path=/API/v1.1/Central
 
 server.port=8070
